Added missing part below line 89

--- a/index.html
+++ b/index.html
@@ -86,4 +86,27 @@
                         <div class="container">
                             <input type="checkbox" id="javascript" name="newsletter_type" value="javascript-news">
                             <label for="javascript"><span class="checkbox"><span class="check-mark">&#10003;</span>Javascript News</span></label>
- 
+  </div>
+                    </div>
+                    <p>Newsletter format</p>
+                    <div class="section">
+                        <div class="container">
+                            <input type="radio" id="html-format" value="HTML" name="newsletter_format">
+                            <label for="html-format"><span class="radio"><span class="radio-check-mark">&#8226;</span>HTML</span></label>
+                        </div>
+                        <div class="container">
+                            <input type="radio" id="plain-text-format" value="plain-text" name="newsletter_format">
+                            <label for="plain-text-format"><span class="radio"><span class="radio-check-mark">&#8226;</span>Plain Text</span></label>
+                        </div>
+                    </div>
+                    <label for="textarea_newsletter">Other topics you'd like to hear about</label>
+                    <textarea id="textarea_newsletter" name="newsletter_other_topics"></textarea>    
+                    <button type="submit">Sign Up</button>
+                </fieldset>
+            </form>        
+        </main>        
+        <footer>
+            <p><em>Copyright The code review</em></p>
+        </footer>        
+    </body>
+</html>
